# u2cli

./: .gitignore  PLAN.md  PRD-agent-device-alignment.md  README.md  package.json  pyproject.toml
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
android-snapshot-helper/: AndroidManifest.xml
docs/sdd/: README.md
docs/sdd/_template/: design.md  requirements.md  tasks.md
docs/sdd/agent-device-alignment/: design.md  requirements.md  tasks.md
docs/sdd/agent-device-catchup/: design.md  requirements.md  tasks.md
docs/sdd/u2cli-core/: design.md  requirements.md  tasks.md
extensions/: androidtestclii.ts  u2cli.ts
openspec/changes/add-compact-snapshot-refs/: design.md  proposal.md  tasks.md
scripts/: build-android-snapshot-helper.sh  build-android-snapshot-jar.sh
src/androidtestclii/: branding.py  capability.py  cli.py  context.py  diagnostics.py  errors.py  gestures.py  locks.py  logs.py  recording.py  replay.py  result.py  system_control.py  timeouts.py  unsupported.py
src/androidtestclii/agent/: __init__.py  alert.py  commands.py
src/androidtestclii/app/: commands.py
src/androidtestclii/device/: __init__.py  commands.py  connect.py  health.py
src/androidtestclii/element/: __init__.py  action.py  query.py  selector.py  target.py
src/androidtestclii/input/: commands.py
src/androidtestclii/pi/: __init__.py  tool_schema.py  tools.json
src/androidtestclii/screen/: commands.py  compact_snapshot.py  dump.py  screenshot.py  size.py  snapshot_backend.py  visual.py
src/androidtestclii/session/: commands.py  store.py
src/androidtestclii/toast/: __init__.py  commands.py
src/androidtestclii/watcher/: __init__.py  commands.py
src/u2cli/: __init__.py  __main__.py  branding.py  capability.py  cli.py  context.py  diagnostics.py  errors.py  gestures.py  locks.py  logging.py  logs.py  recording.py  replay.py  result.py  system_control.py  timeouts.py  unsupported.py
src/u2cli/agent/: __init__.py  alert.py  commands.py
src/u2cli/app/: __init__.py  commands.py
src/u2cli/device/: __init__.py  commands.py  connect.py  health.py
src/u2cli/element/: __init__.py  action.py  query.py  selector.py
src/u2cli/input/: __init__.py  commands.py
src/u2cli/pi/: __init__.py  tool_schema.py  tools.json
src/u2cli/screen/: __init__.py  commands.py  dump.py  screenshot.py  size.py  snapshot_backend.py  visual.py
src/u2cli/session/: __init__.py  commands.py  store.py
src/u2cli/toast/: __init__.py  commands.py
src/u2cli/watcher/: __init__.py  (+1 more)
tests/: conftest.py  test_agent_alignment_coverage.py  test_agent_alignment_more_coverage.py  test_commands.py  test_compact_snapshot_refs.py  test_dump_projection.py  test_locks_timeouts.py  test_pi_extension_smoke.py  test_result.py  test_selector.py  test_snapshot_backend.py
tests/fixtures/: raw_ui_dump_compact_refs.xml
(+10 files in other folders)
